# hairyrat

./: CLAUDE.md  Cargo.toml  LOD_SYSTEM_GUIDE.md  README.md
.claude/: settings.local.json
.kiro/specs/skeletal-mesh-optimization/: design.md  requirements.md  tasks.md
Assets/shaders/: unlit.wgsl  vat_shader.wgsl
hairyrat.gputrace/: (gpu.expert-case-config-data)  (gpu.quicklook-preview)  (gpu.shared-tab-ui-state)  index  metadata
src/: lod.rs  main.rs  main_old.rs
src/lod_system/: README.md  core.rs  examples.rs  mod.rs  strategies.rs  vat.rs
