[package]
name = "hairyrat"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", features = ["trace_tracy"] }
bevy_asset_loader = "0.23.0"
bevy_panorbit_camera = "0.27.0"
iyes_perf_ui = "0.5.0"
bevy-inspector-egui = "0.32.0"
[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3
